# toggl-report-bq

./: .gitignore  README.md  bq_interface.py  main.py  pyproject.toml  requirements.txt  slack_interface.py  toggl_interface.py
